@@ -11,18 +11,17 @@ vignette: >
 
 ## Overview
 
-Tools for cross converting HLA or KIR genotyping data from text strings to multi-column table format as desribed in Milius RP, Mack SJ, Hollenbach JA, et al. 2013. Genotype List String: a grammar for describing HLA and KIR genotyping results in a text string. [Tissue Antigens. 82:106-112](http://www.ncbi.nlm.nih.gov/pubmed/23849068). 
+GLSconversion represents a suite of tools for cross converting HLA or KIR genotyping data from gene list text strings to multi-column tabular format as desribed in Milius RP, Mack SJ, Hollenbach JA, et al. 2013. Genotype List String: a grammar for describing HLA and KIR genotyping results in a text string. [Tissue Antigens. 82:106-112](http://www.ncbi.nlm.nih.gov/pubmed/23849068). 
 
-### Input Data
-
-Data may be passed to GLSconvert as a tab delimited text file name (full path recommended) or as a R object (data frame). Whether a text file or an R object, the first row must be a header line and include column names for the GL string/locus genotypes. Any column preceeding the genotyping information is considered to be identifying/miscellanous information. This would generally include at least the sample id. While there is no limit to the number of columns, there is a requirement to column ordering depending on the conversion direction.  
-
-**Anatomy of a GL String**  
+###Anatomy of a GL String  
 The figure below depicts a genotype List (GL) String representation of a multilocus unphased genotype. A GL String representing HLA-A genotype (A*02:69 and A*23:30, or A*02:302 and, either A*23:26 or A*23:39) and HLA-B genotype (B*44:02:13 and B*49:08) for a single individual is shown. GL String delimiters are parsed hierarchically starting from the locus delimiter (^), proceeding to the genotype delimiter (|), then the chromosome delimiter (+), and ending with the allele delimiter (/).
 
 
 ![](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3715123/bin/tan0082-0106-f1.jpg)
   
+### Input Data
+
+Data may be passed to GLSconvert() as a tab delimited text file name (full path recommended) or as a R object (data frame). Whether a text file or an R object, the first row must be a header line and include column names for the GL string/locus genotypes. Any column preceeding the genotyping information is considered to be identifying/miscellanous information. This would generally include at least the sample id. While there is no limit to the number of columns, there is a requirement to column ordering depending on the conversion direction.  
 
 _**GL String to Table**_  
 Formatting for GL string conversion requires that the last column of the data table must contain the GL string.
@@ -46,7 +45,7 @@ Homozygous allele calls for non-DRB345 alleles can be represented as single alle
 **HLA-DRB3, HLA-DRB4, and HLA-DRB5**  
 HLA-DRB3, HLA-DRB4, and HLA-DRB5 are parsed for homozygous or hemizygous status based on the DRB1 haplotype as defined by Andersson, 1998 (Andersson G. 1998. Evolution of the HLA-DR region. [Front Biosci. 3:d739-45](http://www.ncbi.nlm.nih.gov/pubmed/9675159)) and can be flagged for inconsistency. Inconsistent haplotypes will be indicated in a separate column called "DRB.HapFlag" with the locus or loci that are inconsistent with the respective DRB1 status. You may choose not to have haplotypes flagged using the 'DRB345.Check' parameter (see below).
 
-**Ambiguity**
+**Ambiguity**  
 Only ambiguity at the allele level is compatible with the GL conversion tool (separated by "/"). Ambiguity at the genotype (separated by "|") cannot be used with the GL conversion tool and will terminate the script. This includes tables submitted for conversion to GL strings containing rows of identical non-genotype identifying information (sample ID, experiment ID, etc.), these will be considered to be ambiguous genotypes in the table and the conversion tool will stop.
 
 ## Data Output
@@ -56,7 +55,7 @@ Data can be output to either a text file (tab or comma delimitted) or R object (
 
 ## Parameters
 
-`GLSconvert(Data,Convert,Output="txt",System="HLA",HZY.Red=FALSE,DRB345.Check=FALSE,Cores.Lim=1L)`
+`GLSconvert(Data,Convert,Output="txt",System="HLA",HZY.Red=FALSE,DRB345.Check=FALSE,Strip.Prefix=TRUE,Cores.Lim=1L)`
 
 **Data**
 
@@ -96,6 +95,13 @@ Class: Logical (Default=FALSE).
 
 Indicates whether DR haplotypes should be parsed for correct zygosity and unusual DR haplotypes flagged. Inconsistent loci will appear flagged in a separate column labeled 'DRB.HapFlag' and follow the genotype columns. The default behavior will flag unusual haplotypes. HLA-DRB345 alleles without a respective HLA-DRB1 will remain unchanged and the flag will say 'ND' for not determined.
 
+**Strip.Prefix**
+
+Class: Logical (Default=TRUE).
+
+Applies only to Convert="GL2Tab" conversions. Indicates whether alleles should be stripped of System/Locus prefixes in the final data when converting from GL strings to tabular format. For example, should HLA-A*01:01:01:01 be recorded as 01:01:01:01 in the final table. Required when outputting to a PyPop compatible file. The default will strip prefixes.
+
+
 ## Examples
 
 These are examples only and need not be run as defined below.
@@ -109,16 +115,16 @@ library("devtools")
 install_github("IgDAWG/GLSconversion", build_vignettes = TRUE) # Requires Pandoc or RStudio
 install_github("IgDAWG/GLSconversion") # No Pandoc or RStudio
 
-# Run the a GL2Tab conversion on a data file with default output to text file
-GLSconvert(Data="/your/path/to/file/foo.txt", Convert="GL2Tab")
+# Run the GL2Tab conversion on a data file with default output to text file and no prefix stripping
+GLSconvert(Data="/your/path/to/file/foo.txt", Convert="GL2Tab", Strip.Prefix=FALSE)
 
-# Run the a Tab2GL conversion on a R object outputting to a R object with no DRB345 Flagging
-foo.tab <- GLSconvert(Data=foo, Convert="Tab2GL", Output="R", DRB345.Check=FALSE)
+# Run the Tab2GL conversion on a R object outputting to a R object with DRB345 Flagging
+foo.tab <- GLSconvert(Data=foo, Convert="Tab2GL", Output="R", DRB345.Check=TRUE)
 
-# Run the a Tab2GL conversion on a text file outputting to a csv file
+# Run the Tab2GL conversion on a text file outputting to a csv file
 GLSconvert(Data=foo, Convert="Tab2GL", output="csv")
 
-# Run the a GL2Tab conversion on a data file without the full path name and with homozygous allele reduction of non-DRB345 alleles
+# Run the GL2Tab conversion on a data file without the full path name and with homozygous allele reduction of non-DRB345 alleles
 setwd("/your/path/to/file")
 GLSconvert(Data="foo.txt", Convert="GL2Tab", HZY.Red=TRUE)
 
